More Junit Tests